--- a/api-rest-pedido-mvc/src/main/resources/application.properties
+++ b/api-rest-pedido-mvc/src/main/resources/application.properties
@@ -1,6 +1,14 @@
+# H2 Database
 spring.datasource.url=jdbc:h2:file:./data/database
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# H2 Console
 spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# JPA/Hibernate
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
