--- a/api-rest-pedido-mvc/src/main/resources/application.properties
+++ b/api-rest-pedido-mvc/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-# H2 Database
-spring.datasource.url=jdbc:h2:file:./data/database
+# H2 Database - Configuração em arquivo
+spring.datasource.url=jdbc:h2:file:./data/database;DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
@@ -7,8 +7,13 @@ spring.datasource.password=
 # H2 Console
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+spring.h2.console.settings.trace=true
+spring.h2.console.settings.web-allow-others=true
 
 # JPA/Hibernate
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
